@@ -1,3 +1,8 @@
+2006-09-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gerror.c: Allocate GErrors using the slice allocator.
+	(#354054, Matt Barnes)
+
 2006-09-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/gtimer.c: Forgotten HAVE_CLOCK_GETTIME.
